--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,4 +1,4 @@
-name: Steam account switcher
+name: Test on windows
 
 on:
   push:
@@ -18,9 +18,14 @@ jobs:
       with:
         python-version: 3.9
     - name: Install dependencies
+      shell: pwsh
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if (Get-Item -Path 'requirements.txt' -ErrorAction Ignore) {
+          pip install -r requirements.txt
+        } catch {
+          echo error
+        }
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
