--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -29,4 +29,4 @@ jobs:
         flake8 . --count --ignore=E111,E114 --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Pip install
       run: |
-        pip install .
+        pip -v install .
